<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".InputContentPop">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/teacher"
                android:paddingLeft="10dp"
                android:paddingTop="0dp"
                android:id="@+id/teacher"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                app:shapeAppearance="@style/Rounded">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:inputType="textCapCharacters"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/topic"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                android:paddingLeft="10dp"
                android:paddingTop="0dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:shapeAppearance="@style/Rounded">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/pg_start"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/pg_start"
                    android:paddingLeft="10dp"
                    android:paddingTop="0dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="10dp"
                    app:prefixText="Pg: "
                    app:shapeAppearance="@style/Cut">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:dividerPadding="20dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/outlined_button3"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="?toolBarColor"
                        android:gravity="center"
                        android:onClick="inc_page_start"
                        android:paddingLeft="10dp"
                        android:paddingTop="10dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/plus"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:iconPadding="4dp"
                        tools:ignore="UsingOnClickInXml" />

                    <Button
                        android:id="@+id/outlined_button4"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="?toolBarColor"
                        android:gravity="center"
                        android:paddingLeft="10dp"
                        android:paddingTop="10dp"
                        android:paddingRight="10dp"
                        android:onClick="dec_page_start"
                        android:paddingBottom="10dp"
                        android:text="@string/minus"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:iconPadding="4dp"
                        tools:ignore="UsingOnClickInXml" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/pg_end"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/pg_end"
                    android:inputType="number"
                    android:paddingLeft="10dp"
                    android:paddingTop="0dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="10dp"

                    app:prefixText="Pg: "
                    app:shapeAppearance="@style/Cut">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:dividerPadding="20dp"
                    android:orientation="horizontal">

                    <Button
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="?toolBarColor"
                        android:gravity="center"
                        android:onClick="inc_page_end"
                        android:paddingLeft="10dp"
                        android:paddingTop="10dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/plus"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:iconPadding="4dp"
                        tools:ignore="UsingOnClickInXml" />

                    <Button
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="?toolBarColor"
                        android:gravity="center"
                        android:onClick="dec_page_end"
                        android:paddingLeft="10dp"
                        android:paddingTop="10dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/minus"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:iconPadding="4dp"
                        tools:ignore="UsingOnClickInXml" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/outlined_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="?toolBarColor"
                android:gravity="center"
                android:onClick="send_data"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:text="@string/add_content"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:iconPadding="4dp"
                tools:ignore="UsingOnClickInXml" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>